Change type of syn_worknote to note

--- a/content/post/2015/2015-03-24-worknotes-2015-03-24-202734.md
+++ b/content/post/2015/2015-03-24-worknotes-2015-03-24-202734.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2015-03-24 20:27:34
 author: Julian
-type: syn_worknote
+type: note
 date: 2015-03-24T20:27:34+00:00
 excerpt: Talking and coding today
 url: /worknotes/worknotes-2015-03-24-202734/
