--- a/content/post/2015/2015-03-25-worknotes-2015-03-25-162813.md
+++ b/content/post/2015/2015-03-25-worknotes-2015-03-25-162813.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2015-03-25 16:28:13
 author: Julian
-type: syn_worknote
+type: note
 date: 2015-03-25T16:28:13+00:00
 excerpt: Quite a bit of working aloud
 url: /worknotes/worknotes-2015-03-25-162813/
