--- a/content/post/2016/2016-02-02-worknotes-2016-02-02-092722.md
+++ b/content/post/2016/2016-02-02-worknotes-2016-02-02-092722.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2016-02-02 09:27:22
 author: Julian
-type: syn_worknote
+type: note
 date: 2016-02-02T09:27:22+00:00
 excerpt: Now playing with Federated Wiki here
 url: /worknotes/worknotes-2016-02-02-092722/
