--- a/content/post/2016/2016-02-11-worknotes-2016-02-11-152452.md
+++ b/content/post/2016/2016-02-11-worknotes-2016-02-11-152452.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2016-02-11 15:24:52
 author: Julian
-type: syn_worknote
+type: note
 date: 2016-02-11T15:24:52+00:00
 excerpt: Getting back on the blog wagon
 url: /worknotes/worknotes-2016-02-11-152452/
