--- a/content/post/2015/2015-03-09-worknotes-2015-03-09-073831.md
+++ b/content/post/2015/2015-03-09-worknotes-2015-03-09-073831.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2015-03-09 07:38:31
 author: Julian
-type: syn_worknote
+type: note
 date: 2015-03-09T07:38:31+00:00
 url: /worknotes/worknotes-2015-03-09-073831/
 enclosure:
