--- a/content/post/2015/2015-03-12-worknotes-2015-03-12-125410.md
+++ b/content/post/2015/2015-03-12-worknotes-2015-03-12-125410.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2015-03-12 12:54:10
 author: Julian
-type: syn_worknote
+type: note
 date: 2015-03-12T12:54:10+00:00
 excerpt: And more
 url: /worknotes/worknotes-2015-03-12-125410/
