--- a/content/post/2015/2015-03-16-worknotes-2015-03-16-100130.md
+++ b/content/post/2015/2015-03-16-worknotes-2015-03-16-100130.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2015-03-16 10:01:30
 author: Julian
-type: syn_worknote
+type: note
 date: 2015-03-16T10:01:30+00:00
 excerpt: Noemail and more
 url: /worknotes/worknotes-2015-03-16-100130/
