--- a/content/post/2015/2015-03-23-worknotes-2015-03-23-074450.md
+++ b/content/post/2015/2015-03-23-worknotes-2015-03-23-074450.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2015-03-23 07:44:50
 author: Julian
-type: syn_worknote
+type: note
 date: 2015-03-23T07:44:50+00:00
 excerpt: Start the week
 url: /worknotes/worknotes-2015-03-23-074450/
