--- a/content/post/2015/2015-03-31-worknotes-2015-03-31-142030.md
+++ b/content/post/2015/2015-03-31-worknotes-2015-03-31-142030.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2015-03-31 14:20:30
 author: Julian
-type: syn_worknote
+type: note
 date: 2015-03-31T14:20:30+00:00
 excerpt: Not sure I can link a theme around today
 url: /worknotes/worknotes-2015-03-31-142030/
