--- a/content/post/2015/2015-05-28-worknotes-2015-05-28-120254.md
+++ b/content/post/2015/2015-05-28-worknotes-2015-05-28-120254.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2015-05-28 12:02:54
 author: Julian
-type: syn_worknote
+type: note
 date: 2015-05-28T12:02:54+00:00
 excerpt: Thursday thursday
 url: /worknotes/worknotes-2015-05-28-120254/
