--- a/content/post/2015/2015-06-10-worknotes-2015-06-10-085229.md
+++ b/content/post/2015/2015-06-10-worknotes-2015-06-10-085229.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2015-06-10 08:52:29
 author: Julian
-type: syn_worknote
+type: note
 date: 2015-06-10T08:52:29+00:00
 excerpt: June already?
 url: /worknotes/worknotes-2015-06-10-085229/
