--- a/content/post/2015/2015-09-22-worknotes-2015-09-22-150247-2.md
+++ b/content/post/2015/2015-09-22-worknotes-2015-09-22-150247-2.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2015-09-22 15:02:47
 author: Julian
-type: syn_worknote
+type: note
 date: 2015-09-22T15:02:47+00:00
 url: /worknotes/worknotes-2015-09-22-150247-2/
 enclosure:
