--- a/content/post/2015/2015-11-16-worknotes-2015-11-16-101158.md
+++ b/content/post/2015/2015-11-16-worknotes-2015-11-16-101158.md
@@ -1,7 +1,7 @@
 ---
 title: WorkNotes 2015-11-16 10:11:58
 author: Julian
-type: syn_worknote
+type: note
 date: 2015-11-16T10:11:58+00:00
 excerpt: Ignite 5
 url: /worknotes/worknotes-2015-11-16-101158/
