--- a/content/post/2017/2017-02-13-weeknote-2017-02-17.md
+++ b/content/post/2017/2017-02-13-weeknote-2017-02-17.md
@@ -1,10 +1,10 @@
 ---
 title: Weeknote w/e 2017-02-17
 author: Julian
-type: syn_worknote
+type: note
 date: -001-11-30T00:00:00+00:00
 draft: true
-url: '/?post_type=syn_worknote&p=96871'
+url: '/?post_type=note&p=96871'
 
 ---
   * periodic security reviews with a senior member of my team
