--- a/content/post/2017/2017-11-17-d365ug.md
+++ b/content/post/2017/2017-11-17-d365ug.md
@@ -4,7 +4,7 @@ author: Julian
 type: post
 date: 2017-11-17T10:28:49+00:00
 slug: d365ug 
-aliases: ["/2017/11/17/d365ug"]
+aliases: ["/2017/11/17/d365ug", "/2017/11/17/d365ug-20171114"]
 
 ---
 This week I made my first visit as a new member to the <a href="https://www.crmug.com/home" rel="noopener" target="_blank">Dynamics 365 User Group</a> UK chapter meeting.
