Rewrite front matter on notes to change url to slug and alias

--- a/content/note/2015-03-12-worknotes-2015-03-12-125410.md
+++ b/content/note/2015-03-12-worknotes-2015-03-12-125410.md
@@ -4,7 +4,8 @@ author: Julian
 type: note
 date: 2015-03-12T12:54:10+00:00
 excerpt: And more
-url: /worknotes/worknotes-2015-03-12-125410/
+slug: worknotes-2015-03-12-125410 
+aliases: ["/worknotes/worknotes-2015-03-12-125410"]
 enclosure:
   - |
     |
