--- a/content/note/2015-03-16-worknotes-2015-03-16-100130.md
+++ b/content/note/2015-03-16-worknotes-2015-03-16-100130.md
@@ -4,7 +4,8 @@ author: Julian
 type: note
 date: 2015-03-16T10:01:30+00:00
 excerpt: Noemail and more
-url: /worknotes/worknotes-2015-03-16-100130/
+slug: worknotes-2015-03-16-100130 
+aliases: ["/worknotes/worknotes-2015-03-16-100130"]
 enclosure:
   - |
     |
