--- a/content/note/2015-03-24-worknotes-2015-03-24-202734.md
+++ b/content/note/2015-03-24-worknotes-2015-03-24-202734.md
@@ -4,7 +4,8 @@ author: Julian
 type: note
 date: 2015-03-24T20:27:34+00:00
 excerpt: Talking and coding today
-url: /worknotes/worknotes-2015-03-24-202734/
+slug: worknotes-2015-03-24-202734 
+aliases: ["/worknotes/worknotes-2015-03-24-202734"]
 enclosure:
   - |
     |
