--- a/content/note/2015-03-25-worknotes-2015-03-25-162813.md
+++ b/content/note/2015-03-25-worknotes-2015-03-25-162813.md
@@ -4,7 +4,8 @@ author: Julian
 type: note
 date: 2015-03-25T16:28:13+00:00
 excerpt: Quite a bit of working aloud
-url: /worknotes/worknotes-2015-03-25-162813/
+slug: worknotes-2015-03-25-162813 
+aliases: ["/worknotes/worknotes-2015-03-25-162813"]
 enclosure:
   - |
     |
