--- a/content/note/2015-03-31-worknotes-2015-03-31-142030.md
+++ b/content/note/2015-03-31-worknotes-2015-03-31-142030.md
@@ -4,7 +4,8 @@ author: Julian
 type: note
 date: 2015-03-31T14:20:30+00:00
 excerpt: Not sure I can link a theme around today
-url: /worknotes/worknotes-2015-03-31-142030/
+slug: worknotes-2015-03-31-142030 
+aliases: ["/worknotes/worknotes-2015-03-31-142030"]
 enclosure:
   - |
     |
