--- a/content/note/2015-06-10-worknotes-2015-06-10-085229.md
+++ b/content/note/2015-06-10-worknotes-2015-06-10-085229.md
@@ -4,7 +4,8 @@ author: Julian
 type: note
 date: 2015-06-10T08:52:29+00:00
 excerpt: June already?
-url: /worknotes/worknotes-2015-06-10-085229/
+slug: worknotes-2015-06-10-085229 
+aliases: ["/worknotes/worknotes-2015-06-10-085229"]
 enclosure:
   - |
     |
