--- a/content/note/2015-11-16-worknotes-2015-11-16-101158.md
+++ b/content/note/2015-11-16-worknotes-2015-11-16-101158.md
@@ -4,7 +4,8 @@ author: Julian
 type: note
 date: 2015-11-16T10:11:58+00:00
 excerpt: Ignite 5
-url: /worknotes/worknotes-2015-11-16-101158/
+slug: worknotes-2015-11-16-101158 
+aliases: ["/worknotes/worknotes-2015-11-16-101158"]
 enclosure:
   - |
     |
