--- a/content/note/2016-02-02-worknotes-2016-02-02-092722.md
+++ b/content/note/2016-02-02-worknotes-2016-02-02-092722.md
@@ -4,7 +4,8 @@ author: Julian
 type: note
 date: 2016-02-02T09:27:22+00:00
 excerpt: Now playing with Federated Wiki here
-url: /worknotes/worknotes-2016-02-02-092722/
+slug: worknotes-2016-02-02-092722 
+aliases: ["/worknotes/worknotes-2016-02-02-092722"]
 enclosure:
   - |
     |
