--- a/content/note/2016-02-11-worknotes-2016-02-11-152452.md
+++ b/content/note/2016-02-11-worknotes-2016-02-11-152452.md
@@ -4,7 +4,8 @@ author: Julian
 type: note
 date: 2016-02-11T15:24:52+00:00
 excerpt: Getting back on the blog wagon
-url: /worknotes/worknotes-2016-02-11-152452/
+slug: worknotes-2016-02-11-152452 
+aliases: ["/worknotes/worknotes-2016-02-11-152452"]
 enclosure:
   - |
     |
