--- a/content/note/2015-03-09-worknotes-2015-03-09-073831.md
+++ b/content/note/2015-03-09-worknotes-2015-03-09-073831.md
@@ -3,7 +3,8 @@ title: WorkNotes 2015-03-09 07:38:31
 author: Julian
 type: note
 date: 2015-03-09T07:38:31+00:00
-url: /worknotes/worknotes-2015-03-09-073831/
+slug: worknotes-2015-03-09-073831 
+aliases: ["/worknotes/worknotes-2015-03-09-073831"]
 enclosure:
   - |
     |
