--- a/content/note/2015-03-23-worknotes-2015-03-23-074450.md
+++ b/content/note/2015-03-23-worknotes-2015-03-23-074450.md
@@ -4,7 +4,8 @@ author: Julian
 type: note
 date: 2015-03-23T07:44:50+00:00
 excerpt: Start the week
-url: /worknotes/worknotes-2015-03-23-074450/
+slug: worknotes-2015-03-23-074450 
+aliases: ["/worknotes/worknotes-2015-03-23-074450"]
 enclosure:
   - |
     |
