--- a/content/note/2015-05-28-worknotes-2015-05-28-120254.md
+++ b/content/note/2015-05-28-worknotes-2015-05-28-120254.md
@@ -4,7 +4,8 @@ author: Julian
 type: note
 date: 2015-05-28T12:02:54+00:00
 excerpt: Thursday thursday
-url: /worknotes/worknotes-2015-05-28-120254/
+slug: worknotes-2015-05-28-120254 
+aliases: ["/worknotes/worknotes-2015-05-28-120254"]
 enclosure:
   - |
     |
