--- a/content/note/2015-09-22-worknotes-2015-09-22-150247.md
+++ b/content/note/2015-09-22-worknotes-2015-09-22-150247.md
@@ -3,7 +3,8 @@ title: WorkNotes 2015-09-22 15:02:47
 author: Julian
 type: note
 date: 2015-09-22T15:02:47+00:00
-url: /worknotes/worknotes-2015-09-22-150247/
+slug: worknotes-2015-09-22-150247 
+aliases: ["/worknotes/worknotes-2015-09-22-150247"]
 enclosure:
   - |
     |
