Tag up imported worknotes

--- a/content/note/2016-02-02-worknotes-2016-02-02-092722.md
+++ b/content/note/2016-02-02-worknotes-2016-02-02-092722.md
@@ -6,26 +6,6 @@ date: 2016-02-02T09:27:22+00:00
 excerpt: Now playing with Federated Wiki here
 slug: worknotes-2016-02-02-092722 
 aliases: ["/worknotes/worknotes-2016-02-02-092722"]
-enclosure:
-  - |
-    |
-        //?#
-        
-        
-syndication_source:
-  - WorkNotes
-syndication_source_uri:
-  - https://synesthesiaworknotes.smallpict.com/
-syndication_source_id:
-  - https://synesthesiaworknotes.smallpict.com/rss.xml
-syndication_feed:
-  - https://synesthesiaworknotes.smallpict.com/rss.xml
-syndication_feed_id:
-  - 8
-syndication_permalink:
-  - https://synesthesiaworknotes.smallpict.com/2016/02/02/nowPlayingWithFederatedWikiHere.html
-syndication_item_hash:
-  - 936a27518f338e12315de2074d6ecad6
-
+tags: ["FedWiki"]
 ---
-Now playing with Federated Wiki here
+Now playing with Federated Wiki [here](https://wiki.synesthesia.co.uk)
