--- a/content/post/2007/2007-01-29-22-questions.md
+++ b/content/post/2007/2007-01-29-22-questions.md
@@ -13,12 +13,12 @@ The UK [Department for Education and Skills][1] are major users of Programme an
 
 As an aid to meeting facilitation, [here][3] are the 22 questions as a MindManager [Mindmap][4].
 
-[<img class="aligncenter size-full wp-image-1614" title="22 questions" src="https://www.synesthesia.co.uk/blog/wp-content/uploads/2009/12/22-questions.png" alt="22 questions" width="300" height="230" />][5][
+[<img class="aligncenter size-full wp-image-1614" title="22 questions" src="https://www.synesthesia.co.uk/blog/wp/uploads/2009/12/22-questions.png" alt="22 questions" width="300" height="230" />][5][
   
 ][5]
 
  [1]: https://www.dfes.gov.uk/
  [2]: https://www.dfes.gov.uk/ppm/index.cfm?fuseaction=content.view&CategoryID=29&ContentID=102&killcache=1&SiteID=1
- [3]: https://www.synesthesia.co.uk/msp/wp-content/uploads/22 Questions.mmap
- [4]: https://www.synesthesia.co.uk/blog/wp-content/uploads/2009/12/22-Questions.mmap
- [5]: https://www.synesthesia.co.uk/blog/wp-content/uploads/2009/12/22-questions.png
+ [3]: https://www.synesthesia.co.uk/msp/wp/uploads/22 Questions.mmap
+ [4]: https://www.synesthesia.co.uk/blog/wp/uploads/2009/12/22-Questions.mmap
+ [5]: https://www.synesthesia.co.uk/blog/wp/uploads/2009/12/22-questions.png
