chore: experiment with frontmatter in notebook meta

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -45,7 +45,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.5",
+   "frontmatter":{
+    "summary":"Writing work notes directly from Jupyter notebooks",
+    "slug":"notebook-test"
+   }
+
   }
  },
  "nbformat": 4,
