--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Sample Jupyter Notebook\n",
     "\n",
-    "This is a test of importing Jupyter notebooks directly as work notes"
+    "This is a test of importing Jupyter notebooks directly as work notes using the [Academic CLI](https://github.com/GetRD/academic-file-converter)"
    ]
   },
   {
@@ -41,16 +41,15 @@
     "version": 3
    },
    "file_extension": ".py",
+   "frontmatter": {
+    "slug": "notebook-test",
+    "summary": "Writing work notes directly from Jupyter notebooks"
+   },
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5",
-   "frontmatter":{
-    "summary":"Writing work notes directly from Jupyter notebooks",
-    "slug":"notebook-test"
-   }
-
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
