fix: add hugo math shortcodes

--- a/notebooks/linear-regression.ipynb
+++ b/notebooks/linear-regression.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "ML often splits into two tasks - **regression** (predict quantity) and **classification** (predict a category)\n",
     "\n",
-    "E.g $y = mx+b$\n",
+    "E.g {{< math >}}$y = mx+b${{< /math >}}\n",
     "\n",
     "Challenge is to define `m` and `b` for \"best fit\"\n",
     "\n",
@@ -50,9 +50,9 @@
     "\n",
     "With multiple independent variables\n",
     "\n",
-    "e.g. $y = \\beta_0 + \\beta_1x_1 + \\beta_2x_2 + \\epsilon$\n",
+    "e.g. {{< math >}}$y = \\beta_0 + \\beta_1x_1 + \\beta_2x_2 + \\epsilon${{< /math >}}\n",
     "\n",
-    "$\\epsilon $ is error due to noise\n",
+    "{{< math >}}$\\epsilon ${{< /math >}} is error due to noise\n",
     "\n",
     "Multiple variables can get complex, important to use tools to help select only input variables correlated with the output variables.\n",
     "\n",
@@ -77,9 +77,9 @@
     "\n",
     "Common technique to mitigate overfitting is the use of train/test splits. Training data is used to fit the model, then test data is used to test it with previously-unseen data, if necessary the model can then be tweaked.\n",
     "\n",
-    "### Evaluating the model with $R^2$\n",
+    "### Evaluating the model with {{< math >}}$R^2${{< /math >}}\n",
     "\n",
-    "$R^2$ (the **coefficient of determination**) ratios the average y-value to the average of the residuals. \n",
+    "{{< math >}}$R^2${{< /math >}} (the **coefficient of determination**) ratios the average y-value to the average of the residuals. \n",
     "\n",
     "It measures how well the independent variables explain a dependent variable, with **0.0** meaning no connection and **1.0** meaning a perfect explanation."
    ]
@@ -338,7 +338,7 @@
     "- we train the standard [`LinearRegression`](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html#sklearn.linear_model.LinearRegression) model provided by `scikit-learn` against our training data\n",
     "- then we use the trained model to fit a regression to our test data\n",
     "\n",
-    "The utility allows us to easily score the model using $R^2$."
+    "The utility allows us to easily score the model using {{< math >}}$R^2$.{{< /math >}}"
    ]
   },
   {
@@ -394,6 +394,15 @@
   }
  ],
  "metadata": {
+  "front_matter": {
+   "slug": "linear-regression",
+   "summary": "A second notebook test with some course notes on Linear Regression",
+   "tags": [
+    "machinelearning",
+    "datascience"
+   ],
+   "title": "Linear Regression basics - course note"
+  },
   "kernelspec": {
    "display_name": "syn",
    "language": "python",
@@ -410,12 +419,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.5"
-  },
-  "front_matter": {
-      "title":"Linear Regression basics - course note",
-      "tags": ["machinelearning", "datascience"],
-      "slug" : "linear-regression",
-      "summary": "A second notebook test with some course notes on Linear Regression"
   }
  },
  "nbformat": 4,
